feat: modify wishlist
