# src/dto/response/wishlist.dto.ts
@@ -1,0 +1,7 @@
+export class WishlistItem {
+  _id: string;
+  image: string;
+  name: string;
+  price: number;
+  isStock: boolean;
+}
